# scimem

./: .gitignore  pyproject.toml
data/domain/: corpus.json  timeline.json
reference_papers/: README.md
scripts/: fetch_domain_corpus.py
